# fuzzerest

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  setup.cfg  tox.ini  tutorial.md
fuzzerest/: cli.py  fuzzer.py  mutator.py  request.py
fuzzerest/config/: config.ini  config.py  fuzzlist.txt
fuzzerest/models/: README.md  default_expectations.json  expectations.json  template.json  tutorial.json
fuzzerest/schema/: expectations.yaml  model.yaml  validation.py
scripts/: config.sh
test/: conftest.py  example.json  example_expectations.json  mockserver.py  test_cli.py  test_fuzzer.py  test_mutator.py  test_request.py  test_validation.py
