[metadata]
name = fuzzerest
version = attr: fuzzerest.version.__version__

[options]
install_requires =
    pip == 20.1.1
    setuptools >= 46.0.0
    wheel <= 0.34.2, >= 0.29.0
    requests >= 2.13.0, < 3
    six >= 1.10.0, < 2
    slackclient >= 1.2.1, < 2
    websocket-client < 0.55.0, >= 0.35
    importlib.metadata >= 2.1.1, < 3
python_requires = >=3.7,<3.10
packages = find:
include_package_data = True

[options.extras_require]
testing =
    unittest-xml-reporting >= 2.1.0, < 3
    xmlrunner >= 1.7.7, < 2
    coverage >= 5.2.1, < 6
    pytest >= 6.2.2, < 7
    pytest-cov
    pytest-mock
    flask
notebook =
    notebook >= 6.1.5, < 7
    jupyter >= 1.0.0, < 2

[options.package_data]
fuzzerest =
    util/__init__.py
    util/radamsa/bin/*
    config/*

[options.entry_points]
console_scripts =
  fuzzerest = fuzzerest.cli:main

[bdist_wheel]
universal = 1
