[metadata]
name = fuzzerest
version = attr: fuzzerest.version.__version__

[options]
install_requires =
    Cerberus >= 1.3.2, < 2
    pip >= 23.3.1, < 24
    PyYAML >= 6.0.1, < 7
    setuptools >= 46.0.0
    wheel >= 0.41.3, < 1
    requests >= 2.31.0, < 3
    six >= 1.10.0, < 2
    slackclient >= 1.2.1, < 2
    websocket-client < 0.55.0, >= 0.35
    importlib.metadata >= 6.8.0, < 7
python_requires = >=3.10,<3.12
packages = find:
include_package_data = True

[options.extras_require]
testing =
    unittest-xml-reporting >= 2.1.0, < 3
    xmlrunner >= 1.7.7, < 2
    coverage >= 5.2.1, < 6
    pytest >= 6.2.2, < 7
    pytest-cov
    pytest-kwparametrize
    pytest-mock
    flask
notebook =
    notebook >= 6.1.5, < 7
    jupyter >= 1.0.0, < 2

[options.package_data]
fuzzerest =
    util/__init__.py
    util/radamsa/bin/*
    config/*

[options.entry_points]
console_scripts =
  fuzzerest = fuzzerest.cli:main

[bdist_wheel]
universal = 1
